--- a/trunk/timeTrackerUpd/app/partials/dashboard.html
+++ b/trunk/timeTrackerUpd/app/partials/dashboard.html
@@ -1,3 +1,4 @@
-<div class="container">
-    dashboard
+<div class="container" ng-controller="BarCtrl">
+    <canvas id="bar" class="chart chart-bar" data="data"
+            labels="labels"></canvas>
 </div>
