--- a/trunk/timeTrackerUpd/app/partials/menu.html
+++ b/trunk/timeTrackerUpd/app/partials/menu.html
@@ -15,7 +15,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="index.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">John Smith <b class="caret"></b></a>
+                    <a href="javascript:void(0)" data-target="#" class="dropdown-toggle" data-toggle="dropdown">John Smith <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="javascript:void(0)">Sign Out</a></li>
                     </ul>
